force-app/main/default/objects/PTP_Information__c/fields/Arrangement_type__c.field-meta.xml
<CustomField>
    <fullName>Arrangement_type__c</fullName>
    <description>Arrangement type</description>
    <inlineHelpText>Arrangement type</inlineHelpText>
    <label>Arrangement type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular Payment</fullName>
            </value>
            <value>
                <fullName>Settlement</fullName>
            </value>
            <value>
                <fullName>Full Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>