force-app/main/default/objects/PTP_Information__c/fields/Created_date_year_for_reporting__c.field-meta.xml
<CustomField>
    <fullName>Created_date_year_for_reporting__c</fullName>
    <formula>YEAR( DATEVALUE( CreatedDate ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created date year for reporting</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>