force-app/main/default/objects/PTP_Information__c/fields/created_month_field_for_reporting__c.field-meta.xml
<CustomField>
    <fullName>created_month_field_for_reporting__c</fullName>
    <formula>MONTH(   DATEVALUE( CreatedDate )   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>created month field for reporting</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>