force-app/main/default/objects/PTP_Information__c/fields/Judgment__c.field-meta.xml
<CustomField>
    <fullName>Judgment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Judgment</label>
    <referenceTo>Judgment__c</referenceTo>
    <relationshipLabel>PTP Information</relationshipLabel>
    <relationshipName>PTP_Information</relationshipName>
    <type>Lookup</type>
</CustomField>