force-app/main/default/objects/PTP_Information__c/fields/Judgment_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Judgment_Identifier__c</fullName>
    <formula>Judgment__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Judgment_Identifier</label>
    <type>Text</type>
</CustomField>