force-app/main/default/objects/PTP_Information__c/fields/Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date__c</fullName>
    <formula>( DATEVALUE( PTP_Date__c ) - 7)</formula>
    <label>PTP Expected Payment Date</label>
    <type>Date</type>
</CustomField>