force-app/main/default/objects/PTP_Information__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>PTP Information</relationshipLabel>
    <relationshipName>PTP_Informations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>