force-app/main/default/objects/PTP_Information__c/fields/Product_Current_Balance__c.field-meta.xml
<CustomField>
    <fullName>Product_Current_Balance__c</fullName>
    <formula>IF( Product__r.RecordType.Name == &apos;Loan Account&apos;, Product__r.Current_Payoff_Amount__c , IF(Product__r.RecordType.Name == &apos;Credit Card Account&apos;,Product__r.Current_Balance__c, null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Current Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>