force-app/main/default/objects/PTP_Information__c/fields/Product_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Product_Identifier__c</fullName>
    <formula>Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product_Identifier</label>
    <type>Text</type>
</CustomField>