force-app/main/default/objects/PTP_Information__c/fields/Product_Type_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Type_Display_Name__c</fullName>
    <formula>CASE(Product__r.RecordType.Name, 
&quot;Credit Card Account&quot;, &quot;Fidem MasterCard&quot;, 
&quot;Loan Account&quot;, &quot;Fidem Term Loan&quot;, 
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Type Display Name</label>
    <type>Text</type>
</CustomField>