force-app/main/default/objects/PTP_Information__c/fields/Promise_date_for_reporting__c.field-meta.xml
<CustomField>
    <fullName>Promise_date_for_reporting__c</fullName>
    <formula>DATEVALUE( PTP_Date__c )</formula>
    <label>Promise date for reporting</label>
    <type>Date</type>
</CustomField>