force-app/main/default/objects/PTP_Information__c/fields/Promise_date_Month_field_for_reporting__c.field-meta.xml
<CustomField>
    <fullName>Promise_date_Month_field_for_reporting__c</fullName>
    <formula>MONTH( Promise_date_for_reporting__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promise date Month field for reporting</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>