force-app/main/default/objects/PTP_Information__c/fields/Promise_date_year_for_reporting__c.field-meta.xml
<CustomField>
    <fullName>Promise_date_year_for_reporting__c</fullName>
    <formula>YEAR( Promise_date_for_reporting__c )</formula>
    <label>Promise date year for reporting</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>