force-app/main/default/objects/PTP_Information__c/fields/Promise_Met_count__c.field-meta.xml
<CustomField>
    <fullName>Promise_Met_count__c</fullName>
    <formula>IF( PTP_Mate__c =True, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promise Met count`</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>