force-app/main/default/objects/PTP_Information__c/fields/PTP_Date__c.field-meta.xml
<CustomField>
    <fullName>PTP_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Promise Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>