force-app/main/default/objects/PTP_Information__c/fields/Settlement__c.field-meta.xml
<CustomField>
    <fullName>Settlement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Settlement</label>
    <referenceTo>Settlement__c</referenceTo>
    <relationshipLabel>PTP Information</relationshipLabel>
    <relationshipName>PTP_Information</relationshipName>
    <type>Lookup</type>
</CustomField>