force-app/main/default/objects/PTP_Information__c/fields/Settlement_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Identifier__c</fullName>
    <formula>Settlement__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Settlement_Identifier</label>
    <type>Text</type>
</CustomField>