force-app/main/default/objects/PTP_Information__c/fields/SIF_PIF_Fulfilled_Count__c.field-meta.xml
<CustomField>
    <fullName>SIF_PIF_Fulfilled_Count__c</fullName>
    <formula>IF(  OR(ISPICKVAL( Product__r.Collection_Sub_Status__c , &apos;Payment Arrangement - Monthly&apos;),
ISPICKVAL( Product__r.Collection_Sub_Status__c , &apos;Payment Arrangement – Weekly&apos;))  
, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SIF/PIF Fulfilled Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>