force-app/main/default/objects/PTP_Information__c/recordTypes/Canaccede_PTP.recordType-meta.xml
<RecordType>
    <fullName>Canaccede_PTP</fullName>
    <active>true</active>
    <description>PTP record type for Canaccede Users</description>
    <label>Canaccede PTP</label>
</RecordType>