force-app/main/default/objects/PTP_Information__c/recordTypes/Fidem_PTP.recordType-meta.xml
<RecordType>
    <fullName>Fidem_PTP</fullName>
    <active>true</active>
    <description>PTP record type for Fidem Users</description>
    <label>Fidem PTP</label>
</RecordType>