force-app/main/default/objects/PTP_Information__c/validationRules/ProductFieldUpdateValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>ProductFieldUpdateValidation</fullName>
    <active>true</active>
    <description>This rule allows only system Administrators to update product field on PTP record</description>
    <errorConditionFormula>IF(OR(ISNEW(),  $Profile.Name == &apos;System Administrator&apos;), false,
 ISCHANGED( Product__c ) 
)</errorConditionFormula>
    <errorDisplayField>Product__c</errorDisplayField>
    <errorMessage>You can&apos;t change the Product assigned</errorMessage>
</ValidationRule>